# vscode

./: .vscode-test.js  cglicenses.json  eslint.config.js  package.json
.configurations/: configuration.dsc.yaml
.devcontainer/: README.md  install-vscode.sh  post-create.sh
.eslint-plugin-local/: code-amd-node-module.ts  code-declare-service-brand.ts  code-ensure-no-disposables-leak-in-test.ts  code-import-patterns.ts  code-layering.ts  code-limited-top-functions.ts  code-must-use-result.ts  code-no-dangerous-type-assertions.ts  code-no-native-private.ts  code-no-nls-in-standalone-editor.ts  code-no-potentially-unsafe-disposables.ts  code-no-runtime-import.ts  code-no-standalone-editor.ts  code-no-static-self-ref.ts  code-no-test-async-suite.ts  code-no-unexternalized-strings.ts  code-no-unused-expressions.ts  code-parameter-properties-must-have-explicit-accessibility.ts  code-translation-remind.ts  utils.ts  vscode-dts-cancellation.ts  vscode-dts-create-func.ts  vscode-dts-event-naming.ts  vscode-dts-interface-naming.ts  vscode-dts-literal-or-types.ts  vscode-dts-provider-naming.ts  vscode-dts-region-comments.ts  vscode-dts-string-type-literals.ts  vscode-dts-use-export.ts  vscode-dts-use-thenable.ts  vscode-dts-vscode-in-comments.ts
.github/: classifier.json  copilot-instructions.md  insiders.yml  similarity.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/commands/: codespaces_issue.yml
.github/endgame/: insiders.yml
.github/workflows/: basic.yml  check-clean-git-state.sh  ci.yml  monaco-editor.yml  no-package-lock-changes.yml  no-yarn-lock-changes.yml  telemetry.yml
cli/: CONTRIBUTING.md  Cargo.toml
cli/.cargo/: config.toml
extensions/: package.json  shared.webpack.config.js
extensions/bat/: package.json
extensions/clojure/: package.json
extensions/coffeescript/: package.json
extensions/configuration-editing/: package.json
extensions/cpp/: language-configuration.json  package.json
extensions/csharp/: cgmanifest.json  language-configuration.json  package.json
extensions/css/: package.json
extensions/css-language-features/: README.md  package.json
extensions/dart/: package.json
extensions/debug-auto-launch/: package.json
extensions/debug-server-ready/: package.json
extensions/diff/: package.json
extensions/docker/: package.json
extensions/emmet/: README.md  package.json
extensions/extension-editing/: package.json
extensions/fsharp/: package.json
extensions/git/: README.md  package.json  tsconfig.json
extensions/git-base/: .vscodeignore  README.md  package.json
extensions/github/: README.md  package.json
extensions/github-authentication/: README.md  package.json
extensions/go/: language-configuration.json  package.json
extensions/groovy/: language-configuration.json  package.json
extensions/grunt/: README.md  package.json
extensions/gulp/: README.md  package.json
extensions/handlebars/: package.json
extensions/hlsl/: package.json
extensions/html/: package.json
extensions/html-language-features/: README.md  package.json
extensions/ini/: package.json
extensions/ipynb/: README.md  package.json
extensions/jake/: README.md  package.json
extensions/java/: language-configuration.json  package.json
extensions/javascript/: package.json
extensions/json/: language-configuration.json  package.json
extensions/json-language-features/: README.md  package.json
extensions/julia/: package.json
extensions/latex/: .vscodeignore  cgmanifest.json  package.json
extensions/less/: language-configuration.json  package.json
extensions/log/: package.json
extensions/lua/: package.json
extensions/make/: package.json
extensions/markdown-basics/: package.json
extensions/markdown-language-features/: README.md  package.json
extensions/markdown-math/: package.json
extensions/media-preview/: README.md  package.json
extensions/merge-conflict/: README.md  package.json
extensions/microsoft-authentication/: README.md  extension.webpack.config.js  package.json
extensions/notebook-renderers/: README.md  package.json
extensions/npm/: README.md  package.json
extensions/objective-c/: package.json
extensions/perl/: package.json
extensions/php/: .vscodeignore  language-configuration.json  package.json
extensions/php-language-features/: README.md  package.json
extensions/powershell/: package.json
extensions/pug/: package.json
extensions/python/: package.json
extensions/r/: package.json
extensions/razor/: package.json
extensions/references-view/: package.json
extensions/restructuredtext/: package.json
extensions/ruby/: cgmanifest.json  language-configuration.json  package.json
extensions/rust/: language-configuration.json  package.json
extensions/scss/: package.json
extensions/search-result/: package.json
extensions/shaderlab/: package.json
extensions/shellscript/: package.json
extensions/simple-browser/: esbuild-preview.js  package.json
extensions/sql/: package.json
extensions/swift/: language-configuration.json  package.json
extensions/terminal-suggest/: README.md  extension-browser.webpack.config.js  extension.webpack.config.js  package.json  tsconfig.json
extensions/theme-abyss/: package.json
extensions/theme-kimbie-dark/: package.json
extensions/theme-monokai/: package.json
extensions/theme-monokai-dimmed/: package.json
extensions/theme-quietlight/: package.json
extensions/theme-red/: package.json
extensions/theme-seti/: CONTRIBUTING.md  package.json
extensions/theme-solarized-dark/: package.json
extensions/theme-solarized-light/: package.json
extensions/theme-tomorrow-night-blue/: package.json
extensions/tunnel-forwarding/: package.json
extensions/typescript-basics/: package.json  (+1 more)
remote/: package.json
(+340 files in other folders)
