[[bin]]
name = "code"

[build-dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.2"
bytes = "1.4.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = [
	"serde",
	"std",
	"clock",
], default-features = false }
clap = { version = "4.3.0", features = ["derive", "env"] }
clap_lex = "0.7.0"
console = "0.15.7"
const_format = "0.2.31"
dialoguer = "0.10.4"
dirs = "5.0.1"
flate2 = { version = "1.0.26", default-features = false, features = ["zlib"] }
futures = "0.3.28"
gethostname = "0.4.3"
hyper = { version = "0.14.26", features = ["server", "http1", "runtime"] }
indicatif = "0.17.4"
keyring = { version = "2.0.3", default-features = false, features = [
	"linux-secret-service-rt-tokio-crypto-openssl",
	"platform-windows",
	"platform-macos",
	"linux-keyutils",
] }
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.18"
open = "4.1.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
pin-project = "1.1.0"
rand = "0.8.5"
regex = "1.8.3"
reqwest = { version = "0.11.22", default-features = false, features = [
	"json",
	"stream",
	"native-tls",
] }
rmp-serde = "1.1.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0.96"
sha2 = "0.10.6"
shell-escape = "0.1.5"
sysinfo = { version = "0.29.0", default-features = false }
tar = "0.4.38"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["compat", "codec"] }
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "8cae9b2a24c65c6c1958f5a0e77d72b23b5c6c30", default-features = false, features = [
	"connections",
] }
url = "2.5.4"
uuid = { version = "1.4", features = ["serde", "v4"] }
zip = { version = "0.6.6", default-features = false, features = [
	"time",
	"deflate-zlib",
] }

[features]
default = []
vscode-encrypt = []
vsda = []

[lib]
name = "cli"
path = "src/lib.rs"

[package]
default-run = "code"
edition = "2021"
name = "code-cli"
version = "0.1.0"

[patch]

[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[profile]

[profile.release]
codegen-units = 1
lto = true
strip = true

[target]

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "3.13.1", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
winapi = "0.3.9"
winreg = "0.50.0"
