[[bin]]
name = "code"

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dependencies]
async-trait = "0.1.86"
base64 = "0.22.1"
bytes = "1.10.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", features = [
	"serde",
	"std",
	"clock",
], default-features = false }
clap = { version = "4.5.30", features = ["derive", "env"] }
clap_lex = "0.7.4"
console = "0.15.10"
const_format = "0.2.34"
dialoguer = "0.11.0"
dirs = "6.0.0"
flate2 = { version = "1.0.35", default-features = false, features = ["zlib"] }
futures = "0.3.31"
gethostname = "1.0.0"
hyper = { version = "1.6.0", features = ["server", "http1", "runtime"] }
indicatif = "0.17.11"
keyring = { version = "3.6.1", default-features = false, features = [
	"linux-secret-service-rt-tokio-crypto-openssl",
	"platform-windows",
	"platform-macos",
	"linux-keyutils",
] }
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
open = "5.3.2"
opentelemetry = { version = "0.28.0", features = ["rt-tokio"] }
pin-project = "1.1.9"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
	"json",
	"stream",
	"native-tls",
] }
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.138"
sha2 = "0.10.8"
shell-escape = "0.1.5"
sysinfo = { version = "0.33.1", default-features = false }
tar = "0.4.43"
tempfile = "3.17.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat", "codec"] }
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "8cae9b2a24c65c6c1958f5a0e77d72b23b5c6c30", default-features = false, features = [
	"connections",
] }
url = "2.5.4"
uuid = { version = "1.13", features = ["serde", "v4"] }
zip = { version = "2.2.2", default-features = false, features = [
	"time",
	"deflate-zlib",
] }

[features]
default = []
vscode-encrypt = []
vsda = []

[lib]
name = "cli"
path = "src/lib.rs"

[package]
default-run = "code"
edition = "2021"
name = "code-cli"
version = "0.1.0"

[patch]

[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }

[profile]

[profile.release]
codegen-units = 1
lto = true
strip = true

[target]

[target.'cfg(target_os = "linux")']

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"

[target."cfg(windows)"]

[target."cfg(windows)".dependencies]
winapi = "0.3.9"
winreg = "0.55.0"
